--- a/daan.html
+++ b/daan.html
@@ -164,8 +164,7 @@
                             <img src="./assets/images/logo-2.png" width="60" height="55">
                             <div class="logo-text-container ms-1 ms-sm-2">
                                 <h1 class="fs-md-4 fs-5 mb-0 fw-bolder">म.श.च.ट ,प्रयागराज</h1>
-                                <h2 style="font-weight: 300; margin-top: 3px;">Maa Sheetla <br
-                                        class="d-block d-sm-none" />Charitable Trust</h2>
+                                <h2 style="font-weight: 300; margin-top: 3px;">माँ शीतला चैरिटेबल ट्रस्ट</h2>
                             </div>
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
