Image loading fix

--- a/ayojan.html
+++ b/ayojan.html
@@ -380,7 +380,7 @@
                                                 witnesses the presence of several renowned </p>
                                         </div>
                                         <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='../events/krupa-mahotsav.html'">Know
+                                            onclick="window.location.href='/events/krupa-mahotsav.html'">Know
                                             More</button>
                                     </div>
 
@@ -400,7 +400,7 @@
                                                 Krishna Paksha of the month of Magha</p>
                                         </div>
                                         <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='../events/maha-shivratri.html'">Know
+                                            onclick="window.location.href='/events/maha-shivratri.html'">Know
                                             More</button>
                                     </div>
 
@@ -420,7 +420,7 @@
                                                 Durga, with the five </p>
                                         </div>
                                         <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='../events/nav-ratri.html'">Know More</button>
+                                            onclick="window.location.href='/events/nav-ratri.html'">Know More</button>
                                     </div>
 
                                 </div>
@@ -518,7 +518,7 @@
                                                 हैं। </p>
                                         </div>
                                         <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='../events/krupa-mahotsav.html'">अधिक
+                                            onclick="window.location.href='/events/krupa-mahotsav.html'">अधिक
                                             जानें</button>
                                     </div>
 
@@ -538,7 +538,7 @@
                                                 भागों में भारत में विशेष धूमधाम से मनाया जाता है।</p>
                                         </div>
                                         <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='../events/maha-shivratri.html'">अधिक
+                                            onclick="window.location.href='/events/maha-shivratri.html'">अधिक
                                             जानें</button>
                                     </div>
 
@@ -559,7 +559,7 @@
                                                 उद्दीपना करता है। </p>
                                         </div>
                                         <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='../events/nav-ratri.html'">अधिक
+                                            onclick="window.location.href='/events/nav-ratri.html'">अधिक
                                             जानें</button>
                                     </div>
 
