--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <button type="button" class="btn modal-btn my-3" data-bs-toggle="modal"
                             data-bs-target="#exampleModal1" style="background: #f2f4f8
                                 ; color: #2E4E91;">
-                            पूजा का कार्यक्रम
+                            Temple Schedule
                         </button>
                         <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel"
                             aria="true">
@@ -680,7 +680,7 @@
                                 <div class="item rounded" onclick="window.location.href='./events/krupa-mahotsav.html'">
                                     <div class="d-block rounded">
                                         <div class="rounded"
-                                            style="background: url('/assets/images/carousel/2.png'); background-size: cover; background-position: center; height: 370px;">
+                                            style="background: url('./assets/images/carousel/2.png'); background-size: cover; background-position: center; height: 370px;">
                                         </div>
                                         <div class="overlay rounded"></div>
                                         <div class="carousel-caption text-start">
@@ -697,7 +697,7 @@
                                 <div class="item rounded" onclick="window.location.href='./sevakary/anna-daan.html'">
                                     <div class="d-block rounded">
                                         <div class="rounded"
-                                            style="background: url('/assets/images/carousel/3.jpg'); background-size: cover; background-position: center; height: 370px;">
+                                            style="background: url('./assets/images/carousel/3.jpg'); background-size: cover; background-position: center; height: 370px;">
                                         </div>
                                         <div class="overlay rounded"></div>
                                         <div class="carousel-caption text-start">
@@ -713,7 +713,7 @@
                                 <div class="item rounded" onclick="window.location.href='./sevakary/medical-camp.html'">
                                     <div class="d-block rounded">
                                         <div class="rounded"
-                                            style="background: url('/assets/images/carousel/5.jpg'); height: 370px; background-size: cover; background-position: center;">
+                                            style="background: url('./assets/images/carousel/5.jpg'); height: 370px; background-size: cover; background-position: center;">
                                         </div>
                                         <div class="overlay rounded"></div>
                                         <div class="carousel-caption text-start ">
@@ -729,7 +729,7 @@
                                     onclick="window.location.href='./sevakary/tree-plantation.html'">
                                     <div class="d-block rounded">
                                         <div class="rounded"
-                                            style="background: url('/assets/images/carousel/4.jpg'); height: 370px; background-size: cover; background-position: center;">
+                                            style="background: url('./assets/images/carousel/4.jpg'); height: 370px; background-size: cover; background-position: center;">
                                         </div>
                                         <div class="overlay rounded"></div>
                                         <div class="carousel-caption text-start">
@@ -745,7 +745,7 @@
                                 <div class="item rounded" onclick="window.location.href='./sevakary/kambal-daan.html'">
                                     <div class="d-block rounded">
                                         <div class="rounded"
-                                            style="background: url('/assets/images/carousel/1.jpg'); height: 370px; background-size: cover; background-position: center;">
+                                            style="background: url('./assets/images/carousel/1.jpg'); height: 370px; background-size: cover; background-position: center;">
                                         </div>
                                         <div class="overlay rounded"></div>
                                         <div class="carousel-caption text-start">
@@ -801,7 +801,7 @@
                                 <div class="item rounded" onclick="window.location.href='./events/krupa-mahotsav.html'">
                                     <div class="d-block rounded">
                                         <div class="rounded"
-                                            style="background: url('/assets/images/carousel/2.png'); background-size: cover; background-position: center; height: 370px;">
+                                            style="background: url('./assets/images/carousel/2.png'); background-size: cover; background-position: center; height: 370px;">
                                         </div>
                                         <div class="overlay rounded"></div>
                                         <div class="carousel-caption text-start">
@@ -817,7 +817,7 @@
                                 <div class="item rounded" onclick="window.location.href='./sevakary/anna-daan.html'">
                                     <div class="d-block rounded">
                                         <div class="rounded"
-                                            style="background: url('/assets/images/carousel/3.jpg'); background-size: cover; background-position: center; height: 370px;">
+                                            style="background: url('./assets/images/carousel/3.jpg'); background-size: cover; background-position: center; height: 370px;">
                                         </div>
                                         <div class="overlay rounded"></div>
                                         <div class="carousel-caption text-start">
@@ -833,7 +833,7 @@
                                 <div class="item rounded" onclick="window.location.href='./sevakary/medical-camp.html'">
                                     <div class="d-block rounded">
                                         <div class="rounded"
-                                            style="background: url('/assets/images/carousel/5.jpg'); height: 370px; background-size: cover; background-position: center;">
+                                            style="background: url('./assets/images/carousel/5.jpg'); height: 370px; background-size: cover; background-position: center;">
                                         </div>
                                         <div class="overlay rounded"></div>
                                         <div class="carousel-caption text-start ">
@@ -850,7 +850,7 @@
                                     onclick="window.location.href='./sevakary/tree-plantation.html'">
                                     <div class="d-block rounded">
                                         <div class="rounded"
-                                            style="background: url('/assets/images/carousel/4.jpg'); height: 370px; background-size: cover; background-position: center;">
+                                            style="background: url('./assets/images/carousel/4.jpg'); height: 370px; background-size: cover; background-position: center;">
                                         </div>
                                         <div class="overlay rounded"></div>
                                         <div class="carousel-caption text-start">
@@ -866,7 +866,7 @@
                                 <div class="item rounded" onclick="window.location.href='./sevakary/kambal-daan.html'">
                                     <div class="d-block rounded">
                                         <div class="rounded"
-                                            style="background: url('/assets/images/carousel/1.jpg'); height: 370px; background-size: cover; background-position: center;">
+                                            style="background: url('./assets/images/carousel/1.jpg'); height: 370px; background-size: cover; background-position: center;">
                                         </div>
                                         <div class="overlay rounded"></div>
                                         <div class="carousel-caption text-start">
