footer, ayojan link fix

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                                         <img src="./assets/images/modal.png" width="30" height="30"
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
-                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">परिचय</h5>
+                                                            <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
                                                             <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
                                                         </div>
                                                     </div>
