--- a/parichay.html
+++ b/parichay.html
@@ -676,7 +676,7 @@
                         <div class="d-flex flex-column pe-3 mb-4">
                             <p class="fw-bold">About</p>
                             <ul class="list-unstyled">
-                                <li><a class="dropdown-item" href="./parichay.html#1">
+                                <li><a class="dropdown-item" href="./parichay.html#1"  onclick="changeDiv(1)">
                                         <div class="d-flex">
                                             <img src="./assets/images/modal.png" width="30" height="30" class="me-2" />
                                             <div class="d-flex flex-column">
@@ -686,7 +686,7 @@
                                         </div>
                                     </a>
                                 </li>
-                                <li><a class="dropdown-item" href="./parichay.html#3">
+                                <li><a class="dropdown-item" href="./parichay.html#3"  onclick="changeDiv(3)">
                                         <div class="d-flex">
                                             <img src="./assets/images/modal.png" width="30" height="30" class="me-2" />
                                             <div class="d-flex flex-column">
@@ -876,17 +876,17 @@
                         <div class="d-flex flex-column pe-5 mb-4">
                             <p class="fw-bold">विषय</p>
                             <ul class="list-unstyled">
-                                <li><a class="dropdown-item" href="./parichay.html#1">
+                                <li><a class="dropdown-item" href="./parichay.html#1" onclick="changeDiv(1)">
                                         <div class="d-flex">
                                             <img src="./assets/images/modal.png" width="30" height="30" class="me-2" />
                                             <div class="d-flex flex-column">
-                                                <h5 class="m-0 fw-bold" style="font-size: 13px;">परिचय</h5>
+                                                <h5 class="m-0 fw-bold" style="font-size: 13px;" >परिचय</h5>
                                                 <p class="footer-subtext">माँ शीतला चैरिटेबल ट्रस्ट</p>
                                             </div>
                                         </div>
                                     </a>
                                 </li>
-                                <li><a class="dropdown-item" href="./parichay.html#3">
+                                <li><a class="dropdown-item" href="./parichay.html#3" onclick="changeDiv(3)">
                                         <div class="d-flex">
                                             <img src="./assets/images/modal.png" width="30" height="30" class="me-2" />
                                             <div class="d-flex flex-column">
@@ -896,7 +896,7 @@
                                         </div>
                                     </a>
                                 </li>
-                                <li><a class="dropdown-item" href="./parichay.html#2">
+                                <li><a class="dropdown-item" href="./parichay.html#2" onclick="changeDiv(2)">
                                         <div class="d-flex">
                                             <img src="./assets/images/modal.png" width="30" height="30" class="me-2" />
                                             <div class="d-flex flex-column">
