--- a/ayojan.html
+++ b/ayojan.html
@@ -379,9 +379,9 @@
                                                 thousand devotees gather to receive blessings. This festival also
                                                 witnesses the presence of several renowned </p>
                                         </div>
-                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='/events/krupa-mahotsav.html'">Know
-                                            More</button>
+                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"><a class="my-link"
+                                                href="./events/krupa-mahotsav.html">Know More</a>
+                                        </button>
                                     </div>
 
                                 </div>
@@ -399,9 +399,8 @@
                                                 power, and benevolence are revered. Celebrated on the 13th night of the
                                                 Krishna Paksha of the month of Magha</p>
                                         </div>
-                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='/events/maha-shivratri.html'">Know
-                                            More</button>
+                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"><a class="my-link"
+                                                href="./events/maha-shivratri.html">Know More</a></button>
                                     </div>
 
                                 </div>
@@ -419,8 +418,8 @@
                                                 festival revolves around the worship of the seven main forms of Goddess
                                                 Durga, with the five </p>
                                         </div>
-                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='/events/nav-ratri.html'">Know More</button>
+                                        <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"><a class="my-link"
+                                                href="./events/nav-ratri.html">Know More</a></button>
                                     </div>
 
                                 </div>
@@ -518,8 +517,8 @@
                                                 हैं। </p>
                                         </div>
                                         <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='/events/krupa-mahotsav.html'">अधिक
-                                            जानें</button>
+                                            ><a href="./events/krupa-mahotsav.html" class="my-link">अधिक
+                                                जानें</a>     </button>
                                     </div>
 
                                 </div>
@@ -538,8 +537,8 @@
                                                 भागों में भारत में विशेष धूमधाम से मनाया जाता है।</p>
                                         </div>
                                         <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='/events/maha-shivratri.html'">अधिक
-                                            जानें</button>
+                                            ><a href="./events/maha-shivratri.html" class="my-link">अधिक
+                                                जानें</a> </button>
                                     </div>
 
                                 </div>
@@ -559,8 +558,8 @@
                                                 उद्दीपना करता है। </p>
                                         </div>
                                         <button class="btn mb-2 py-2" style="background-color: #F93; color: #fff;"
-                                            onclick="window.location.href='/events/nav-ratri.html'">अधिक
-                                            जानें</button>
+                                            ><a href="./events/nav-ratri.html" class="my-link">अधिक
+                                                जानें</a> </button>
                                     </div>
 
                                 </div>
@@ -983,7 +982,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-        <script src="./assets/script/translate.js"></script>
+    <script src="./assets/script/translate.js"></script>
 </body>
 
 </html>
