footer translation fix

--- a/events/maha-shivratri.html
+++ b/events/maha-shivratri.html
@@ -548,7 +548,7 @@
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
                                                         <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 P.M.</h5>
-                                                        <p class="footer-subtext">रात्रि शयन</p>
+                                                        <p class="footer-subtext">Mandir Closes</p>
                                                     </div>
                                                 </div>
                                             </a></li>
