--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                                             class="me-2" />
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">About Us</h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -71,7 +71,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Founder
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -82,7 +82,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Our Mission
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Charitable Trust</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -104,7 +104,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">History
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -115,7 +115,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Activites
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -126,7 +126,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Schedule
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -137,7 +137,7 @@
                                                         <div class="d-flex flex-column">
                                                             <h5 class="m-0 fw-bold" style="font-size: 13px;">Gallery
                                                             </h5>
-                                                            <p style="font-size: 15px;">माँ शीतला चैरिटेबल ट्रस्ट</p>
+                                                            <p style="font-size: 12px;">Maa Sheetla Krupa Mandir</p>
                                                         </div>
                                                     </div>
                                                 </a></li>
@@ -1190,7 +1190,7 @@
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
                                                         <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 P.M.</h5>
-                                                        <p class="footer-subtext">रात्रि शयन</p>
+                                                        <p class="footer-subtext">Mandir Closes</p>
                                                     </div>
                                                 </div>
                                             </a></li>
