--- a/mandir.html
+++ b/mandir.html
@@ -553,7 +553,7 @@
                                     <span style="color: #A19292;">Gallery</span>
                                 </p>
                                 <div class="d-flex flex-column my-4">
-                                    <h2 style="color: #FF9933; font-weight: 600;">ऑनलाइन दर्शन के लिए गैलरी</h2>
+                                    <h2 style="color: #FF9933; font-weight: 600;">Gallery for Online Darshan</h2>
                                 </div>
                                 <p class="fw-bold mt-4">Maa Sheetla Devi</p>
                                 <div class="row mx-auto">
@@ -1148,7 +1148,7 @@
                                                         class="me-2" />
                                                     <div class="d-flex flex-column">
                                                         <h5 class="m-0 fw-bold" style="font-size: 13px;">08:00 P.M.</h5>
-                                                        <p class="footer-subtext">रात्रि शयन</p>
+                                                        <p class="footer-subtext">Mandir Closes</p>
                                                     </div>
                                                 </div>
                                             </a></li>
